The <Footer> works with every page except <About>. Still overlapping with resume button. Moving resume button into the banner to fix this. Also, added momentum scrolling to artwork page.

--- a/client/src/pages/Artwork/style.css
+++ b/client/src/pages/Artwork/style.css
@@ -10,7 +10,9 @@
 }
 
 #artwork-page {
+    overflow-y: scroll;
     text-align:center;
+    -webkit-overflow-scroliling: touch;
 }
 
 .genre-title {
